# DeskSnapShot

./: CMakeLists.txt  README.md  install.sh  snapshot_manager  test_main.cpp
DeskSnapShot/include/: desktop_snapshot_api.h
DeskSnapShot/package/: uos-desktop-snapshot_1.0.0_amd64.deb
package/: uos-deep-freeze_1.2.1_amd64.deb  uos-desktop-snapshot_1.0.0_amd64.deb
package/uos-desktop-snapshot_1.0.0_amd64/DEBIAN/: control  postinst
package/uos-desktop-snapshot_1.0.0_amd64/usr/lib/: libdesktop_snapshot.so.1  libdesktop_snapshot.so.1.0.0
scripts/: autostart.sh
src/: autostart_helper.cpp  desktop_snapshot_lib.cpp  snapshot_cli.cpp
